#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
gRPC-Web ç«¯ç‚¹æ¢å¤æ¨¡å—

æä¾›çƒ­æ›´æ–°åŽçš„ç«¯ç‚¹æ¢å¤ã€åŠ¨æ€æ³¨å†Œå’Œæ¨¡å—é‡è½½åŠŸèƒ½ã€‚
ä»Ž grpc_gateway.py ä¸­æå–ï¼Œé™ä½Žä¸»æ–‡ä»¶ä½“ç§¯ã€‚
"""

from __future__ import annotations

import json
import logging
from typing import Any, Callable, Dict, Optional

from fastapi import HTTPException

from server.api.grpc_gateway.endpoints import SUPPORTED_ENDPOINTS

logger = logging.getLogger(__name__)


# ---------------------------------------------------------------------------
# çƒ­æ›´æ–°ï¼šæ¨¡å—çº§é‡è½½
# ---------------------------------------------------------------------------

def _reload_endpoints() -> bool:
    """
    é‡æ–°æ³¨å†Œæ‰€æœ‰ç«¯ç‚¹ï¼ˆç”¨äºŽçƒ­æ›´æ–°åŽæ¢å¤ï¼‰ã€‚

    æµç¨‹ï¼š
    1. æ¸…ç©ºæ—§ç«¯ç‚¹
    2. importlib.reload ç½‘å…³æ¨¡å—ä»¥è§¦å‘ @_register è£…é¥°å™¨
    3. è‹¥å…³é”®ç«¯ç‚¹ä»ç¼ºå¤±ï¼Œé™çº§æ‰‹åŠ¨æ³¨å†Œ
    """
    old_count = len(SUPPORTED_ENDPOINTS)
    SUPPORTED_ENDPOINTS.clear()
    logger.info(f"å·²æ¸…ç©º gRPC ç«¯ç‚¹æ³¨å†Œè¡¨ï¼ˆæ—§ç«¯ç‚¹æ•°: {old_count}ï¼‰")

    try:
        import importlib
        import sys

        if "server.api.grpc_gateway" not in sys.modules:
            import server.api.grpc_gateway  # noqa: F401

        gateway_module = sys.modules["server.api.grpc_gateway"]
        importlib.reload(gateway_module)

        endpoint_count = len(SUPPORTED_ENDPOINTS)
        logger.info(f"é‡æ–°åŠ è½½åŽç«¯ç‚¹æ•°é‡: {endpoint_count}")

        key_endpoints = ["/bazi/interface", "/bazi/shengong-minggong", "/bazi/rizhu-liujiazi"]
        missing = [ep for ep in key_endpoints if ep not in SUPPORTED_ENDPOINTS]

        if endpoint_count == 0 or missing:
            logger.warning(f"âš ï¸  ç«¯ç‚¹æœªæ­£ç¡®æ³¨å†Œï¼ˆæ€»æ•°: {endpoint_count}, ç¼ºå¤±: {missing}ï¼‰ï¼Œå°è¯•æ‰‹åŠ¨æ³¨å†Œ...")
            _manual_register_core_endpoints()

        endpoint_count = len(SUPPORTED_ENDPOINTS)
        logger.info(f"âœ… gRPC ç«¯ç‚¹å·²é‡æ–°æ³¨å†Œï¼Œå½“å‰ç«¯ç‚¹æ•°é‡: {endpoint_count}")

        if endpoint_count > 0:
            logger.debug(f"å·²æ³¨å†Œçš„ç«¯ç‚¹: {list(SUPPORTED_ENDPOINTS.keys())[:10]}...")
            missing = [ep for ep in key_endpoints if ep not in SUPPORTED_ENDPOINTS]
            if missing:
                logger.warning(f"âš ï¸  å…³é”®ç«¯ç‚¹æœªæ³¨å†Œ: {missing}")
            else:
                logger.info(f"âœ… å…³é”®ç«¯ç‚¹éªŒè¯é€šè¿‡: {key_endpoints}")
        else:
            logger.error("âŒ ç«¯ç‚¹é‡æ–°æ³¨å†ŒåŽæ•°é‡ä¸º0ï¼Œå¯èƒ½å­˜åœ¨æ¨¡å—åŠ è½½é—®é¢˜")

        return endpoint_count > 0
    except Exception as e:
        logger.error(f"âŒ gRPC ç«¯ç‚¹é‡æ–°æ³¨å†Œå¤±è´¥: {e}", exc_info=True)
        return False


# ---------------------------------------------------------------------------
# å¯åŠ¨ / çƒ­æ›´æ–°ï¼šç¡®ä¿å…³é”®ç«¯ç‚¹å­˜åœ¨
# ---------------------------------------------------------------------------

def _ensure_endpoints_registered() -> None:
    """ç¡®ä¿æ‰€æœ‰å…³é”®ç«¯ç‚¹å·²æ³¨å†Œï¼ˆæ¨¡å—åŠ è½½ + çƒ­æ›´æ–°åŽè°ƒç”¨ï¼‰ã€‚"""
    global SUPPORTED_ENDPOINTS  # noqa: PLW0603

    key_endpoints = [
        "/bazi/interface",
        "/bazi/shengong-minggong",
        "/bazi/rizhu-liujiazi",
        "/api/v2/desk-fengshui/analyze",
        "/daily-fortune-calendar/query",
    ]

    if len(SUPPORTED_ENDPOINTS) == 0:
        logger.error("ðŸš¨ ç«¯ç‚¹åˆ—è¡¨ä¸ºç©ºï¼ç›´æŽ¥æ‰‹åŠ¨æ³¨å†Œæ‰€æœ‰å…³é”®ç«¯ç‚¹...")
        missing_endpoints = key_endpoints
    else:
        missing_endpoints = [ep for ep in key_endpoints if ep not in SUPPORTED_ENDPOINTS]

    logger.debug(
        f"æ£€æŸ¥å…³é”®ç«¯ç‚¹æ³¨å†ŒçŠ¶æ€: key_endpoints={key_endpoints}, "
        f"missing_endpoints={missing_endpoints}, "
        f"supported_endpoints_count={len(SUPPORTED_ENDPOINTS)}"
    )

    if not missing_endpoints:
        return

    logger.error(f"ðŸš¨ æ£€æµ‹åˆ°ç¼ºå¤±ç«¯ç‚¹: {missing_endpoints}ï¼Œå°è¯•æ‰‹åŠ¨æ³¨å†Œ...")
    try:
        _register_missing_endpoints(missing_endpoints)
    except Exception as e:
        logger.error(f"æ‰‹åŠ¨æ³¨å†Œç«¯ç‚¹å¤±è´¥: {e}", exc_info=True)


# ---------------------------------------------------------------------------
# è¯·æ±‚çº§åŠ¨æ€æ³¨å†Œï¼ˆendpoint æœªå‘½ä¸­æ—¶çš„ fallbackï¼‰
# ---------------------------------------------------------------------------

def _try_dynamic_register(endpoint: str) -> Optional[Callable]:
    """
    å½“è¯·æ±‚åˆ°è¾¾ä½† SUPPORTED_ENDPOINTS ä¸­æ‰¾ä¸åˆ°æ—¶ï¼Œå°è¯•å³æ—¶æ³¨å†Œã€‚
    è¿”å›ž handler å‡½æ•°ï¼Œæˆ– Noneã€‚
    """
    registry = _DYNAMIC_REGISTRY.get(endpoint)
    if registry is None:
        return None

    try:
        handler = registry()
        if handler:
            SUPPORTED_ENDPOINTS[endpoint] = handler
            logger.info(f"âœ… åŠ¨æ€æ³¨å†Œç«¯ç‚¹: {endpoint}")
        return handler
    except Exception as e:
        logger.error(f"åŠ¨æ€æ³¨å†Œç«¯ç‚¹å¤±è´¥ ({endpoint}): {e}", exc_info=True)
        return None


# ---------------------------------------------------------------------------
# å†…éƒ¨å·¥å…·
# ---------------------------------------------------------------------------

def _manual_register_core_endpoints() -> None:
    """æ‰‹åŠ¨æ³¨å†Œ 3 ä¸ªæ ¸å¿ƒç«¯ç‚¹ï¼ˆ_reload_endpoints çš„é™çº§è·¯å¾„ï¼‰ã€‚"""
    try:
        from server.api.v1.bazi import BaziInterfaceRequest, ShengongMinggongRequest
        from server.services.bazi_interface_service import BaziInterfaceService
        from server.utils.bazi_input_processor import BaziInputProcessor
        from server.orchestrators.bazi_data_orchestrator import BaziDataOrchestrator
        from server.orchestrators.modules_config import get_modules_config
        from server.api.v1.bazi_display import _assemble_shengong_minggong_response

        async def _handle_bazi_interface(payload: Dict[str, Any]):
            import asyncio
            request_model = BaziInterfaceRequest(**payload)
            loop = asyncio.get_event_loop()
            from server.utils.async_executor import get_executor
            result = await loop.run_in_executor(
                get_executor(),
                BaziInterfaceService.generate_interface_full,
                request_model.solar_date,
                request_model.solar_time,
                request_model.gender,
                request_model.name or "",
                request_model.location or "æœªçŸ¥åœ°",
                request_model.latitude or 39.00,
                request_model.longitude or 120.00,
            )
            return {"success": True, "data": result}

        async def _handle_shengong_minggong(payload: Dict[str, Any]):
            from datetime import datetime
            request_model = ShengongMinggongRequest(**payload)
            final_solar_date, final_solar_time, _ = BaziInputProcessor.process_input(
                request_model.solar_date, request_model.solar_time,
                request_model.calendar_type or "solar",
                request_model.location, request_model.latitude, request_model.longitude,
            )
            current_time = datetime.now()
            if request_model.current_time:
                try:
                    current_time = datetime.strptime(request_model.current_time, "%Y-%m-%d %H:%M")
                except ValueError:
                    pass
            modules = get_modules_config("shengong_minggong")
            orchestrator_data = await BaziDataOrchestrator.fetch_data(
                final_solar_date, final_solar_time, request_model.gender,
                modules=modules, current_time=current_time, preprocessed=True,
                calendar_type=request_model.calendar_type or "solar",
                location=request_model.location, latitude=request_model.latitude,
                longitude=request_model.longitude,
                dayun_year_start=request_model.dayun_year_start,
                dayun_year_end=request_model.dayun_year_end,
                target_year=request_model.target_year,
            )
            return _assemble_shengong_minggong_response(
                orchestrator_data, final_solar_date, final_solar_time,
                request_model.gender, current_time,
                request_model.dayun_year_start, request_model.dayun_year_end,
                request_model.target_year,
            )

        from server.api.v1.rizhu_liujiazi import RizhuLiujiaziRequest, get_rizhu_liujiazi

        async def _handle_rizhu_liujiazi(payload: Dict[str, Any]):
            request_model = RizhuLiujiaziRequest(**payload)
            return await get_rizhu_liujiazi(request_model)

        SUPPORTED_ENDPOINTS["/bazi/interface"] = _handle_bazi_interface
        SUPPORTED_ENDPOINTS["/bazi/shengong-minggong"] = _handle_shengong_minggong
        SUPPORTED_ENDPOINTS["/bazi/rizhu-liujiazi"] = _handle_rizhu_liujiazi
        logger.info("âœ… æ‰‹åŠ¨æ³¨å†Œæ ¸å¿ƒç«¯ç‚¹æˆåŠŸï¼ˆåŒ…å« /bazi/rizhu-liujiaziï¼‰")
    except Exception as e:
        logger.error(f"âŒ æ‰‹åŠ¨æ³¨å†Œæ ¸å¿ƒç«¯ç‚¹å¤±è´¥: {e}", exc_info=True)


def _register_missing_endpoints(missing_endpoints: list) -> None:
    """æŒ‰éœ€æ³¨å†Œ _ensure_endpoints_registered ä¸­å‘çŽ°çš„ç¼ºå¤±ç«¯ç‚¹ã€‚"""

    if "/daily-fortune-calendar/query" in missing_endpoints:
        try:
            from server.api.v1.daily_fortune_calendar import DailyFortuneCalendarRequest, query_daily_fortune_calendar

            async def _h_daily_fortune_query(payload: Dict[str, Any]):
                request_model = DailyFortuneCalendarRequest(**payload)
                result = await query_daily_fortune_calendar(request_model)
                if hasattr(result, "model_dump"):
                    return result.model_dump()
                return result

            SUPPORTED_ENDPOINTS["/daily-fortune-calendar/query"] = _h_daily_fortune_query
            logger.info("âœ… æ‰‹åŠ¨æ³¨å†Œç«¯ç‚¹: /daily-fortune-calendar/query")
        except Exception as e:
            logger.error(f"âŒ æ‰‹åŠ¨æ³¨å†Œ /daily-fortune-calendar/query å¤±è´¥: {e}", exc_info=True)

    if "/bazi/interface" in missing_endpoints:
        try:
            from server.api.v1.bazi import BaziInterfaceRequest, generate_bazi_interface
            from fastapi import Request as _Req
            from unittest.mock import MagicMock

            async def _h_bazi_interface(payload: Dict[str, Any]):
                request_model = BaziInterfaceRequest(**payload)
                mock_request = MagicMock(spec=_Req)
                result = await generate_bazi_interface(request_model, mock_request)
                if hasattr(result, "model_dump"):
                    return result.model_dump()
                elif hasattr(result, "dict"):
                    return result.dict()
                return result

            SUPPORTED_ENDPOINTS["/bazi/interface"] = _h_bazi_interface
            logger.error("ðŸš¨ æ‰‹åŠ¨æ³¨å†Œç«¯ç‚¹: /bazi/interface")
        except Exception as e:
            logger.error(f"âŒ æ‰‹åŠ¨æ³¨å†Œ /bazi/interface ç«¯ç‚¹å¤±è´¥: {e}", exc_info=True)

    if "/bazi/shengong-minggong" in missing_endpoints:
        try:
            from server.api.v1.bazi import ShengongMinggongRequest
            from server.utils.bazi_input_processor import BaziInputProcessor
            from server.orchestrators.bazi_data_orchestrator import BaziDataOrchestrator
            from server.orchestrators.modules_config import get_modules_config
            from server.api.v1.bazi_display import _assemble_shengong_minggong_response

            async def _h_shengong(payload: Dict[str, Any]):
                from datetime import datetime as dt_m
                request_model = ShengongMinggongRequest(**payload)
                final_sd, final_st, _ = BaziInputProcessor.process_input(
                    request_model.solar_date, request_model.solar_time,
                    request_model.calendar_type or "solar",
                    request_model.location, request_model.latitude, request_model.longitude,
                )
                ct = dt_m.now()
                if request_model.current_time:
                    try:
                        ct = dt_m.strptime(request_model.current_time, "%Y-%m-%d %H:%M")
                    except ValueError:
                        pass
                mods = get_modules_config("shengong_minggong")
                odata = await BaziDataOrchestrator.fetch_data(
                    final_sd, final_st, request_model.gender,
                    modules=mods, current_time=ct, preprocessed=True,
                    calendar_type=request_model.calendar_type or "solar",
                    location=request_model.location, latitude=request_model.latitude,
                    longitude=request_model.longitude,
                    dayun_year_start=request_model.dayun_year_start,
                    dayun_year_end=request_model.dayun_year_end,
                    target_year=request_model.target_year,
                )
                return _assemble_shengong_minggong_response(
                    odata, final_sd, final_st, request_model.gender, ct,
                    request_model.dayun_year_start, request_model.dayun_year_end,
                    request_model.target_year,
                )

            SUPPORTED_ENDPOINTS["/bazi/shengong-minggong"] = _h_shengong
            logger.error("ðŸš¨ æ‰‹åŠ¨æ³¨å†Œç«¯ç‚¹: /bazi/shengong-minggong")
        except Exception as e:
            logger.error(f"âŒ æ‰‹åŠ¨æ³¨å†Œ /bazi/shengong-minggong ç«¯ç‚¹å¤±è´¥: {e}", exc_info=True)

    if "/bazi/rizhu-liujiazi" in missing_endpoints:
        try:
            from server.api.v1.rizhu_liujiazi import RizhuLiujiaziRequest, get_rizhu_liujiazi

            async def _h_rizhu(payload: Dict[str, Any]):
                request_model = RizhuLiujiaziRequest(**payload)
                return await get_rizhu_liujiazi(request_model)

            SUPPORTED_ENDPOINTS["/bazi/rizhu-liujiazi"] = _h_rizhu
            logger.error("ðŸš¨ æ‰‹åŠ¨æ³¨å†Œç«¯ç‚¹: /bazi/rizhu-liujiazi")
        except Exception as e:
            logger.error(f"âŒ æ‰‹åŠ¨æ³¨å†Œ /bazi/rizhu-liujiazi ç«¯ç‚¹å¤±è´¥: {e}", exc_info=True)

    if "/api/v2/desk-fengshui/analyze" in missing_endpoints:
        try:
            from server.api.v2.desk_fengshui_api import analyze_desk_fengshui
            from fastapi import UploadFile
            from fastapi.responses import JSONResponse
            import base64
            from io import BytesIO

            async def _h_desk_fengshui(payload: Dict[str, Any]):
                image_base64 = payload.get("image_base64", "")
                if not image_base64:
                    raise HTTPException(status_code=400, detail="ç¼ºå°‘å›¾ç‰‡æ•°æ®")
                try:
                    if "," in image_base64:
                        image_base64 = image_base64.split(",")[1]
                    image_bytes = base64.b64decode(image_base64)
                except Exception as e:
                    raise HTTPException(status_code=400, detail=f"å›¾ç‰‡è§£ç å¤±è´¥: {str(e)}")
                image_file = UploadFile(
                    file=BytesIO(image_bytes),
                    filename=payload.get("filename", "desk.jpg"),
                    headers={"content-type": payload.get("content_type", "image/jpeg")},
                )
                result = await analyze_desk_fengshui(image=image_file)
                if isinstance(result, JSONResponse):
                    body = result.body
                    return json.loads(body.decode("utf-8")) if isinstance(body, bytes) else body
                return result

            SUPPORTED_ENDPOINTS["/api/v2/desk-fengshui/analyze"] = _h_desk_fengshui
            logger.error("ðŸš¨ æ‰‹åŠ¨æ³¨å†Œç«¯ç‚¹: /api/v2/desk-fengshui/analyze")
        except Exception as e:
            logger.error(f"âŒ æ‰‹åŠ¨æ³¨å†Œ /api/v2/desk-fengshui/analyze ç«¯ç‚¹å¤±è´¥: {e}", exc_info=True)


# ---------------------------------------------------------------------------
# åŠ¨æ€æ³¨å†Œè¡¨ï¼šendpoint -> factoryï¼ˆè¿”å›ž handler çš„æ— å‚å‡½æ•°ï¼‰
# ---------------------------------------------------------------------------

def _make_rizhu_liujiazi() -> Callable:
    from server.api.v1.rizhu_liujiazi import RizhuLiujiaziRequest, get_rizhu_liujiazi

    async def handler(payload: Dict[str, Any]):
        return await get_rizhu_liujiazi(RizhuLiujiaziRequest(**payload))
    return handler


def _make_desk_fengshui() -> Callable:
    from server.api.v2.desk_fengshui_api import analyze_desk_fengshui
    from fastapi import UploadFile
    from fastapi.responses import JSONResponse
    import base64
    from io import BytesIO

    async def handler(payload: Dict[str, Any]):
        image_base64 = payload.get("image_base64", "")
        if not image_base64:
            raise HTTPException(status_code=400, detail="ç¼ºå°‘å›¾ç‰‡æ•°æ®")
        try:
            if "," in image_base64:
                image_base64 = image_base64.split(",")[1]
            image_bytes = base64.b64decode(image_base64)
        except Exception as e:
            raise HTTPException(status_code=400, detail=f"å›¾ç‰‡è§£ç å¤±è´¥: {str(e)}")
        image_file = UploadFile(
            file=BytesIO(image_bytes),
            filename=payload.get("filename", "desk.jpg"),
            headers={"content-type": payload.get("content_type", "image/jpeg")},
        )
        result = await analyze_desk_fengshui(image=image_file)
        if isinstance(result, JSONResponse):
            body = result.body
            return json.loads(body.decode("utf-8")) if isinstance(body, bytes) else body
        return result
    return handler


def _make_wuxing_proportion_test() -> Callable:
    from server.api.v1.wuxing_proportion import WuxingProportionRequest, wuxing_proportion_test

    async def handler(payload: Dict[str, Any]):
        return await wuxing_proportion_test(WuxingProportionRequest(**payload))
    return handler


def _make_xishen_jishen_test() -> Callable:
    from server.api.v1.xishen_jishen import XishenJishenRequest, xishen_jishen_test

    async def handler(payload: Dict[str, Any]):
        return await xishen_jishen_test(XishenJishenRequest(**payload))
    return handler


def _make_daily_fortune_calendar_test() -> Callable:
    from server.api.v1.daily_fortune_calendar import DailyFortuneCalendarRequest, daily_fortune_calendar_test

    async def handler(payload: Dict[str, Any]):
        return await daily_fortune_calendar_test(DailyFortuneCalendarRequest(**payload))
    return handler


def _make_daily_fortune_calendar_query() -> Callable:
    from server.api.v1.daily_fortune_calendar import DailyFortuneCalendarRequest, query_daily_fortune_calendar

    async def handler(payload: Dict[str, Any]):
        result = await query_daily_fortune_calendar(DailyFortuneCalendarRequest(**payload))
        if hasattr(result, "model_dump"):
            return result.model_dump()
        return result
    return handler


_DYNAMIC_REGISTRY: Dict[str, Callable[[], Callable]] = {
    "/bazi/rizhu-liujiazi": _make_rizhu_liujiazi,
    "/api/v2/desk-fengshui/analyze": _make_desk_fengshui,
    "/bazi/wuxing-proportion/test": _make_wuxing_proportion_test,
    "/bazi/xishen-jishen/test": _make_xishen_jishen_test,
    "/daily-fortune-calendar/test": _make_daily_fortune_calendar_test,
    "/daily-fortune-calendar/query": _make_daily_fortune_calendar_query,
}
